package edu.fiuba.algo3.modelo;

public interface IDificultad {

    IPista crearPistaEconomica(IPais pais, Ladron ladron);

    IPista crearPistaHistorica(IPais pais, Ladron ladron);

    IPista crearPistaDeViaje(IPais pais, Ladron ladron);

}
